// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros preact-emotion 1`] = `
"import styled from 'preact-emotion/macro'

let Thing = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/preact-styled-base\\";

let Thing = _styled(\\"div\\", {
  target: \\"ep298t30\\",
  label: \\"Thing\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`macros react-emotion 1`] = `
"import styled from 'react-emotion/macro'

let Thing = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

let Thing = _styled(\\"div\\", {
  target: \\"ee3ac3y0\\",
  label: \\"Thing\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;
